--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
   wg-easy:
-    image: wg-easy
+    build: .
     command: npm run serve
     volumes:
       - ./src/:/app/
