--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "prom-client": "^14.0.1",
     "qrcode": "^1.4.4",
     "uuid": "^8.3.2"
   },
